--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,40 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile
+    depends_on:
+      migrate:
+        condition: service_completed_successfully
     ports: ["8080:8080"]
+  db:
+    image: postgres:14.1-alpine
+    networks:
+        new:
+            aliases:
+                - database
+    environment:
+        POSTGRES_DB: gleragames
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+    ports:
+      - '5432:5432'
+    volumes: 
+      - ./volume/db:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -dgleragames -Upostgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  migrate:
+    image: migrate/migrate
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+        - new
+    volumes:
+        - ./migrations:/migrations
+    command: ["-path", "/migrations", "-database",  "postgres://postgres:postgres@database:5432/gleragames?sslmode=disable", "up"]
+    links: 
+        - db
+networks:
+      new:
