--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -1,5 +1,5 @@
 {
     "url" : "http://google.com",
-    "data_source_name" : "host=127.0.0.1 port=5432 user=postgres password=postgres dbname=gleragames sslmode=disable",
+    "data_source_name" : "postgres://postgres:postgres@database:5432/gleragames?sslmode=disable",
     "db_query_timeout" : "1s"
 }
